--- a/index.html
+++ b/index.html
@@ -5,19 +5,10 @@
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
     <title>Dead Man's Hand</title>
     <style>
-        /*html, body {
-            overflow: hidden;
-            width   : 100%;
-            height  : 100%;
-            margin  : 0;
-            padding : 0;
+        html, body {
+            text-align: center;
+            background-color: black;
         }
-
-        #renderCanvas {
-            width   : 100%;
-            height  : 100%;
-            touch-action: none;
-        }*/
     </style>
 </head>
 <body>
